--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>Document</title>
   </head>
   <body>
+
+    
+
+    <div class="wrapper">
+      <div class="calc_wrapper">
+        <div class="input_container">
+          <div id="display" class="grid-item">input</div>
+        </div>
+        <div class="clear_delete_contaienr">
+          <button id="clear" class="grid-item">CLEAR</button>
+          <button id="delete" class="grid-item">DEL</button>
+        </div>
+        <div class="grid-container">
+          <button id="seven" class="grid-item">7</button>
+          <button id="eight" class="grid-item">8</button>
+          <button id="nine"class="grid-item">9</button>
+          <button id="divide"class="grid-item">÷</button>
+
+          <button id="four"class="grid-item">4</button>
+          <button id="five" class="grid-item">5</buton>
+          <button id="six"class="grid-item">6</button>
+          <button id="multiply" class="grid-item">x</button>
+
+          <button id="one"class="grid-item">1</buttonn>
+          <button id="two"class="grid-item">2</button>
+          <button id="three"class="grid-item">3</button>
+          <button id="subtract"class="grid-item">-</buton>
+
+          <button id="decimal"class="grid-item">.</button>
+          <button id="zero"class="grid-item">0</button>
+          <button id="equal"class="grid-item">&#61</button>
+          <button id="add"class="grid-item">+</button>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="calculator.js"></script>
   </body>
 </html>
