updating function add

--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   </head>
   <body>
 
-    
-
     <div class="wrapper">
       <div class="calc_wrapper">
         <div class="input_container">
-          <div id="display" class="grid-item">input</div>
+          <div id="display" class="grid-item"></div>
         </div>
         <div class="clear_delete_contaienr">
           <button id="clear" class="grid-item">CLEAR</button>
